第3章: Podfileの記載更新（ライブラリ検証用）

--- a/03_MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/Podfile
+++ b/03_MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/Podfile
@@ -7,4 +7,12 @@ target 'MosaicPhotoGalleryLayouts' do
 
   # Pods for MosaicPhotoGalleryLayouts
   
+  # UI表現の際に利用するライブラリ
+  pod 'AnimatedCollectionViewLayout'
+  pod 'Blueprints'
+  pod 'FanMenu'
+  pod 'BetterSegmentedControl', '~> 1.3'
+  pod 'Parchment'
+  pod 'Nantes'
+  pod 'PanModal'
 end
