第3章: ライブラリ追加

--- a/03_MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/Podfile
+++ b/03_MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/Podfile
@@ -15,4 +15,6 @@ target 'MosaicPhotoGalleryLayouts' do
   pod 'Parchment'
   pod 'Nantes'
   pod 'PanModal'
+  pod 'PTCardTabBar'
+  pod 'Nuke'
 end
