--- a/03_MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/Podfile
+++ b/03_MosaicPhotoGalleryLayouts/MosaicPhotoGalleryLayouts/Podfile
@@ -11,11 +11,9 @@ target 'MosaicPhotoGalleryLayouts' do
   pod 'AnimatedCollectionViewLayout'
   pod 'Blueprints'
   pod 'FanMenu'
-  pod 'BetterSegmentedControl', '~> 1.3'
   pod 'Parchment'
   pod 'Nantes'
-  pod 'PanModal'
   pod 'PTCardTabBar'
-  pod 'Nuke'
   pod 'TagListView', '~> 1.0'
+  pod 'FontAwesome.swift'
 end
