第4章: ライブラリの追加（後で取捨選択をする）

--- a/04_UICollectionViewCompositionalLayoutExample/UICollectionViewCompositionalLayoutExample/Podfile
+++ b/04_UICollectionViewCompositionalLayoutExample/UICollectionViewCompositionalLayoutExample/Podfile
@@ -13,4 +13,6 @@ target 'UICollectionViewCompositionalLayoutExample' do
   pod 'PanModal'
   pod 'ESPullToRefresh'
   pod 'Loaf'
+  pod 'MXParallaxHeader'
+  pod 'BetterSegmentedControl'
 end
